# bidding-model-server

./: CMakeLists.txt  README.md  build.bat  client.cpp  config.yaml  main.cpp
data/: index_config_0  index_config_1
handler/: bid_handler.cpp  bid_handler.h
include/: common.cpp  common.h  const.h  simple_logger.h
include/log4cpp/: config.h
lib/log4cpp/: liborocos-log4cpp.2.9.dylib
manager/: ad_index.cpp  ad_index.h  bid_server_manager.cpp  bid_server_manager.h  campaign_index.cpp  campaign_index.h  index.cpp  index.h  index_manager.cpp  index_manager.h
proto/: ad_bid.grpc.pb.cc  ad_bid.grpc.pb.h  ad_bid.pb.cc  ad_bid.pb.h  ad_bid.proto
service/: bid_service.cpp  bid_service.h
